add_library(
        page_cache
        page_cache.hpp
        page_cache.cpp
        page_cache_adapter.hpp
        page_cache_adapter.cpp
)
target_include_directories(
        page_cache
        PRIVATE
        ../..
)
target_link_libraries(
        page_cache
        utilities
)

add_executable(
        test_page_cache
        test/test_page_cache.cpp
)
target_include_directories(
        test_page_cache
        PRIVATE
        ../..
)
target_link_libraries(
        test_page_cache
        page_cache
        sqlite
)
